--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -11,4 +11,9 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BaseLibrary\BaseLibrary.csproj" />
+      <ProjectReference Include="..\Client\Client.csproj" />
+    </ItemGroup>
+
 </Project>
